--- a/Lab1/Q3/Q3.html
+++ b/Lab1/Q3/Q3.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<meta charset="UTF-8">
 
 <html>
     <head>
@@ -7,7 +8,7 @@
 
 <nav>
     <ul>
-        <a href="https://www.w3schools.com"><li>Home</li></a>
+        <a href="https://www.ucd.ie/"><li>Home</li></a>
         <a href="http://www.ucd.ie/alumni/"><li>Alumni</li></a>
         
         <ul> 
