--- a/Lab1/Q2/Q2.html
+++ b/Lab1/Q2/Q2.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html >
+<meta charset="UTF-8">
+
 <html>
 <head> 
     <link rel = "stylesheet" href="Q2.css">  <!--This links the css file to the q2 for the border -->
