Finished Lab1 fully

--- a/Lab1/Q1/Q1.html
+++ b/Lab1/Q1/Q1.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html >
 
-<html>
+
+<html lang = 'en'>
     <head> 
         <meta charset="UTF-8">
         <title> 
@@ -9,6 +10,7 @@
     </head>
 <body>
     <h1>NEWS ITEM</h1>
+    
     <article>
     <blockquote>
 
