--- a/Lab1/Q3/Q3.html
+++ b/Lab1/Q3/Q3.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 
+<html lang="en">
 <head>
     <Title>Q3</Title>
     <meta charset="UTF-8">
@@ -34,3 +35,5 @@
     <a title="Link to UCD news!" href="../Q1/Q1.html">
         <img src="UCD_CREST.png" alt="University College Dublin crest">
     </a>
+
+    </html>
