--- a/Lab1/Q2/Q2.html
+++ b/Lab1/Q2/Q2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html >
-
+<html lang="en">
 <head> 
     <link rel = "stylesheet" href="Q2.css">  <!--This links the css file to the q2 for the border -->
     <meta charset="UTF-8">
@@ -94,3 +94,4 @@
     </tr>
 
 </table>
+</html>
