--- a/Lab2/Q2/Q2.html
+++ b/Lab2/Q2/Q2.html
@@ -9,6 +9,7 @@
 </head>
 
 
+<div class="small-letters">
 <table class = "course-tables">
     <tr>
         <th scope="col"> Module code</th>
@@ -53,11 +54,13 @@
     </tr>
 
 </table>
-
+</div>
 <p>
 <p>
 
+<div class="small-letters">
 <table class = "course-tables">
+    
     <tr>
         <th scope="col"> Module code</th>
         <th scope="col"> Module Name</th>
@@ -94,6 +97,7 @@
         <td>STAT10430</td>
         <td>Statistics with Python</td>
     </tr>
-
+    
 </table>
+</div>
 </html>
