--- a/Web Design Project/gallery.html
+++ b/Web Design Project/gallery.html
@@ -2,9 +2,103 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact Us</title>
+
+    <link rel="stylesheet" href="css/navbar.css">
+    <link rel="stylesheet" href="css/gallery.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="icon" href="img/pizza_favicon.png" type="image/x-icon">
+
+
+
 </head>
+<header>
+    <!--Navigation Bar-->
+    <nav class="navbar">
+        <div class="brand" style="font-size: 200%; margin-left: 10%;">
+            Londisimio's
+        </div>
+
+        <a href="#" class="toggle-button">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </a>
+        <div class="navbar-links">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="menu.html">Menu</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="order.html">Order online</a></li>
+            </ul>
+        </div>
+    </nav>
+</header>
+
 <body>
 
 </body>
+
+
+
+
+
+
+
+<footer class="footer">
+    <div class="footer-left">
+        <div class="footer_logo">LONDISIMO's</div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Proin id bibendum eros, et scelerisque libero.
+            Nam tincidunt est non rutrum porta.
+            Pellentesque lobortis pellentesque purus ac lobortis.
+        </p>
+        <div class="social-media">
+            <a href="#"><i class="fa fa-facebook"></i></a>
+            <a href="#"><i class="fa fa-instagram"></i></a>
+            <a href="#"><i class="fa fa-twitter"></i></a>
+        </div>
+    </div>
+    <ul class="footer-right">
+        <li>
+            <h2>Information</h2>
+            <ul class="footer_row">
+                <li><a href="https://www.ucd.ie/">UCD Website</a></li>
+                <li><a href="https://github.com/LonesX/">My Github</a></li>
+
+
+            </ul>
+        </li>
+        <li class="links">
+            <h2>Useful Links</h2>
+
+            <ul class="footer_row">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="menu.html">Menu</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="order.html">Order online</a></li>
+            </ul>
+        </li>
+
+        <li class="Address">
+            <h2>Address</h2>
+
+            <ul class="footer_row">
+                <li>University College Dublin,</li>
+                <li>Belfield,</li>
+                <li>Dublin 4,</li>
+                <li>Ireland,</li>
+                <li>D04 V1W8</li>
+            </ul>
+        </li>
+
+    </ul>
+
+</footer>
+
+<script src ="js/navbar_scroll.js"></script>
 </html>
