--- a/Web Design Project/index.html
+++ b/Web Design Project/index.html
@@ -31,9 +31,9 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="menu.html">Menu</a></li>
-            <li><a href="#">Gallery</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Order online</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="order.html">Order online</a></li>
         </ul>
     </div>
 </nav>
@@ -45,18 +45,22 @@
 
     <div class="slideshow-container">
         <div class="mySlides fade">
-            <img src="img/slideshow_img1.jpg" alt="picture of pizza" style="width:100%;">
+<!--            <img src="img/slideshow_img1.jpg" alt="picture of pizza" style="width:100%; height:100vh; ">-->
+            <div class="slide1"></div>
         </div>
 
         <div class="mySlides fade">
-            <img src="img/slideshow_img2.jpg" alt="picture of pizza" style="width:100%;">
+<!--            <img src="img/slideshow_img2.jpg" alt="picture of pizza" style="width:100%; height:100vh;">-->
+            <div class="slide2"></div>
         </div>
         <div class="mySlides fade">
-            <img src="img/slideshow_main.jpg" alt="picture of pizza" style="width:100%;">
+<!--            <img src="img/slideshow_main.jpg" alt="picture of pizza" style="width:100%;height:100vh;">-->
+            <div class="slide3"></div>
         </div>
 
         <div class="mySlides fade">
-            <img src="img/slideshow_img4.jpg" alt="picture of pizza" style="width:100%;">
+<!--            <img src="img/slideshow_img4.jpg" alt="picture of pizza" style="width:100%;height:100vh;">-->
+            <div class="slide4"></div>
         </div>
 
         <div class="slideshow-text">
