--- a/Web Design Project/menu.html
+++ b/Web Design Project/menu.html
@@ -30,9 +30,9 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="menu.html">Menu</a></li>
-                <li><a href="#">Gallery</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">Order online</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="order.html">Order online</a></li>
             </ul>
         </div>
     </nav>
@@ -43,7 +43,7 @@
 <body>
 <div class="menuPic-container">
 
-<img src="img/menu_img1.jpg" alt="Picture of menu background" style ="width:100%;">
+    <div class="MenuPic"></div>
 
 <div class="MenuPicText">Our Menu</div>
 </div>
