Finished Full site

--- a/Web Design Project/gallery.html
+++ b/Web Design Project/gallery.html
@@ -39,9 +39,88 @@
 </header>
 
 <body>
+<div class="menuPic-container">
+
+    <div class="MenuPic"></div>
+
+    <div class="MenuPicText">Gallery</div>
+</div>
+
+
+<div class="BreakTitle" >
+    <span class="green">Pi</span>
+    <span class="white">zz</span>
+    <span class="red">a!</span>
+
+</div>
+
+
+
+<div class="row">
+    <div class="column">
+        <img src="img/bottom_img1.jpg" alt="Picture of pizza">
+    </div>
+    <div class="column">
+        <img src="img/bottom_img2.jpg" alt="Picture of pizza">
+    </div>
+    <div class="column">
+        <img src="img/bottom_img3.jpg" alt="Picture of pizza ">
+    </div>
+    <div class="column">
+        <img src="img/bottom_img5.jpg" alt="Picture of venice">
+    </div>
+    <div class="column">
+        <img src="img/botttom_img4.jpg" alt="Picture of venice">
+    </div>
+    <div class="column">
+        <img src="img/slideshow_img4.jpg" alt="Picture of venice">
+    </div>
+
+</div>
+
+<div class ="box1">
+</div>
+
+<div class="BreakTitle" >
+    <span class="green">Our</span>
+    <span class="white">T</span>
+    <span class="red">eam!</span>
+
+</div>
+
+
+<div class="Team">
+    <div class="pictures">
+    <a class="pfp" id="owner" href="#" onclick="unhide('owner')"><img src="img/owner.jpg" alt="Picture of original owner"></a>
+    <a class="pfp" id="head_chef" href="#" onclick="unhide('head_chef')"><img src="img/chef.jpeg" alt="Picture of original owner"></a>
+    </div>
+</div>
+
+
+
+
+<article id="owner_text">
+    <p></p>
+    <span class="Name">Original Owner</span>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin id bibendum eros, et scelerisque libero. Nam tincidunt est non rutrum porta. Pellentesque lobortis pellentesque purus ac lobortis. Donec mollis massa quis posuere dictum. Ut malesuada, lorem ac fringilla eleifend, sem urna vulputate nulla, a luctus ante velit et ligula. In mi augue, rhoncus sed nisl sed, volutpat convallis quam. Curabitur turpis lectus, mollis mattis dui sed, vestibulum auctor erat. Nunc luctus purus sed ante placerat finibus. Praesent convallis velit sit amet porttitor iaculis. In sed ligula consectetur, sodales purus sed, imperdiet sem. Aliquam odio ex, iaculis quis metus sit amet, imperdiet commodo tellus. Nullam consequat lorem eget libero rhoncus pretium. Pellentesque nec porttitor mauris, in tincidunt libero.
+        Maecenas quis suscipit est. Aenean nec efficitur nisl. Nulla facilisi. Pellentesque et lectus vel nisl ornare tristique. Fusce tristique ante nibh, varius viverra risus interdum sit amet. Suspendisse potenti. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Phasellus lacus lectus, vulputate quis augue at, ullamcorper rhoncus urna. Donec vel ex risus.
+
+
+        Quisque sed elit erat. Curabitur mollis, lorem vitae varius fringilla, nunc lorem tincidunt magna, non fermentum nisl erat non metus.
+    </p>
+</article>
+
+
+<article id="head_chef_text">
+    <p></p>
+    <span class="Name">Head Chef</span>
+    <p>Aliquam eget scelerisque mauris, in consectetur eros. Nunc molestie dui ut dolor interdum convallis. Nullam interdum sem magna. Quisque semper cursus magna, vel imperdiet justo vulputate congue. Sed efficitur leo sapien, sit amet pellentesque nulla accumsan non. Praesent nec ligula vel erat luctus elementum. Integer lobortis tortor eget ornare suscipit. Ut ultrices id erat at feugiat. Duis pulvinar nisl nisi, eget viverra nisi pellentesque et. Suspendisse potenti. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Phasellus lacus lectus, vulputate quis augue at, ullamcorper rhoncus urna. Donec vel ex risus.
+    </p>
+</article>
+
+
 
 </body>
-
 
 
 
@@ -101,4 +180,6 @@
 </footer>
 
 <script src ="js/navbar_scroll.js"></script>
+<script src ="js/team_text_display.js"></script>
+
 </html>
