--- a/Web Design Project/menu.html
+++ b/Web Design Project/menu.html
@@ -41,6 +41,7 @@
 
 
 <body>
+<!--Main picture-->
 <div class="menuPic-container">
 
     <div class="MenuPic"></div>
@@ -49,7 +50,7 @@
 </div>
 <br>
 
-
+<!--This is just menu-->
 <article >
     <div class="menu-list-container">
         <div class="menu-list-title"><strong>Pizza - 16 inch</strong></div>
@@ -112,7 +113,7 @@
 
     </div>
 
-
+<!--Divider for drinks-->
     <div class ="box1"></div>
 
     <div class="menu-list-title"><strong>Drinks</strong></div>
@@ -153,9 +154,9 @@
             Pellentesque lobortis pellentesque purus ac lobortis.
         </p>
         <div class="social-media">
-            <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-instagram"></i></a>
-            <a href="#"><i class="fa fa-twitter"></i></a>
+            <a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a>
+            <a href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a>
+            <a href="https://twitter.com/?lang=en"><i class="fa fa-twitter"></i></a>
         </div>
     </div>
     <ul class="footer-right">
