--- a/Web Design Project/index.html
+++ b/Web Design Project/index.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="icon" href="img/pizza_favicon.png" type="image/x-icon">
 
 
 
@@ -67,36 +66,35 @@
             Londisimo's
         </div>
         <!--Arrows-->
-        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        <a class="prev" onclick="nextSlide(-1)">&#10094;</a>
+        <a class="next" onclick="nextSlide(1)">&#10095;</a>
     </div>
     <br>
 
 <!--Opening hours times-->
 <article >
     <div class="open">
-        <h1 style="text-align:center;"><strong>OPEN</strong></h1>
+        <h1 id = "opening" style="text-align:center;"><strong>OPEN</strong></h1>
         <p  style="text-align:center;">Opening Hours</p>
-        <p  style="text-align:center;">Monday - Thursday, 12:00AM - 10PM</p>
-        <p  style="text-align:center;">Friday - Sunday, 12:00AM - 11PM</p>
-
+        <p  style="text-align:center;">Monday - Sunday, 12:00AM - 10PM</p>
         <h1 style="text-align:center;"><strong>Ordering?</strong></h1>
-        <p  style="text-align:center;"><a href="index.html">Order online</a></p>
+        <p  style="text-align:center;"><a href="order.html">Order online</a></p>
         <p  style="text-align:center;">OR</p>
-        <p  style="text-align:center;"><a href="index.html">Come eat at the world renowned pizzeria!</a></p>
+        <p  style="text-align:center;"><a href="contact.html">Come eat at the world renowned pizzeria!</a></p>
     </div>
 </article>
 
 <!--Parallax scroll picture-->
 <div class ="box1">
 </div>
-
+<!--Italian style divider-->
     <div class="story" >
     <span class="green">OUR</span>
         <span class="white">Italian</span>
         <span class="red">STORY</span>
 
     </div>
+<!--    History of Londisimo's-->
 <article class="history">
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin id bibendum eros, et scelerisque libero. Nam tincidunt est non rutrum porta. Pellentesque lobortis pellentesque purus ac lobortis. Donec mollis massa quis posuere dictum. Ut malesuada, lorem ac fringilla eleifend, sem urna vulputate nulla, a luctus ante velit et ligula. In mi augue, rhoncus sed nisl sed, volutpat convallis quam. Curabitur turpis lectus, mollis mattis dui sed, vestibulum auctor erat. Nunc luctus purus sed ante placerat finibus. Praesent convallis velit sit amet porttitor iaculis. In sed ligula consectetur, sodales purus sed, imperdiet sem. Aliquam odio ex, iaculis quis metus sit amet, imperdiet commodo tellus. Nullam consequat lorem eget libero rhoncus pretium. Pellentesque nec porttitor mauris, in tincidunt libero.
 
@@ -134,9 +132,9 @@
             Pellentesque lobortis pellentesque purus ac lobortis.
         </p>
         <div class="social-media">
-            <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-instagram"></i></a>
-            <a href="#"><i class="fa fa-twitter"></i></a>
+            <a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a>
+            <a href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a>
+            <a href="https://twitter.com/?lang=en"><i class="fa fa-twitter"></i></a>
         </div>
     </div>
     <ul class="footer-right">
@@ -158,7 +156,6 @@
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="order.html">Order online</a></li>
-
             </ul>
         </li>
 
@@ -178,6 +175,9 @@
 
 </footer>
 
+<!--All the scrip-->
 <script src ="js/slideshow.js"></script>
 <script src ="js/navbar_scroll.js"></script>
+<script src ="js/index_time.js"></script>
+
 </html>
