--- a/Web Design Project/index.html
+++ b/Web Design Project/index.html
@@ -66,8 +66,8 @@
             Londisimo's
         </div>
         <!--Arrows-->
-        <a class="prev" onclick="nextSlide(-1)">&#10094;</a>
-        <a class="next" onclick="nextSlide(1)">&#10095;</a>
+        <a class="prev" onclick="nextSlides(-1)">&#10094;</a>
+        <a class="next" onclick="nextSlides(1)">&#10095;</a>
     </div>
     <br>
 
